validação de dados

--- a/mercado/pom.xml
+++ b/mercado/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.clientes</groupId>
+			<artifactId>clientes</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
